[gd_scene load_steps=17 format=3 uid="uid://cxhxs1t68mnu7"]

[ext_resource type="Script" uid="uid://deeede0i4iw5l" path="res://scripts/main.gd" id="1_adgqn"]
[ext_resource type="PackedScene" uid="uid://dx7lwrwftm8oe" path="res://scenes/parallax_background.tscn" id="1_w1cr1"]
[ext_resource type="PackedScene" uid="uid://cc56d6il42hwp" path="res://scenes/ground.tscn" id="2_kbm85"]
[ext_resource type="PackedScene" uid="uid://cufenoygodkl1" path="res://scenes/character.tscn" id="3_ir76f"]
[ext_resource type="PackedScene" uid="uid://hdsox5ob3ahb" path="res://scenes/hud.tscn" id="5_fewo3"]
[ext_resource type="PackedScene" uid="uid://krrn8dgeni12" path="res://scenes/game_over.tscn" id="6_jk37s"]
[ext_resource type="AudioStream" uid="uid://cnesthpd5mlgd" path="res://assets/sound/colis√£o.wav" id="7_choun"]
[ext_resource type="PackedScene" uid="uid://dkwbq2wxa1p0p" path="res://scenes/ghost.tscn" id="8_tipki"]
[ext_resource type="AudioStream" uid="uid://rlaj6hybb06w" path="res://assets/sound/coleta de luz.wav" id="8_ya4ey"]
[ext_resource type="PackedScene" uid="uid://f8g1wpr4i0rj" path="res://scenes/CombustivelManager.tscn" id="10_choun"]
[ext_resource type="AudioStream" uid="uid://cx40cbxkb7oue" path="res://assets/sound/salto.wav" id="11_ya4ey"]
[ext_resource type="AudioStream" uid="uid://4ypp7mbhtpfg" path="res://assets/sound/sopro continuo.wav" id="12_eb6dy"]
[ext_resource type="AudioStream" uid="uid://d06t8re2817iu" path="res://assets/sound/sopro ghost.mp3" id="13_trceg"]
[ext_resource type="AudioStream" uid="uid://cuacagg8e2fsx" path="res://assets/sound/thunder.wav" id="14_a8y0u"]
[ext_resource type="AudioStream" uid="uid://mrj56duy2sbg" path="res://assets/sound/thunder bells.wav" id="15_jkv2x"]
[ext_resource type="PackedScene" uid="uid://hem0vjcahe57" path="res://scenes/combustivel.tscn" id="16_jbj1t"]

[node name="Main" type="Node"]
script = ExtResource("1_adgqn")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.5, 0.5, 0.5, 1)

[node name="ParallaxBackground" parent="." instance=ExtResource("1_w1cr1")]

[node name="Ground" parent="." instance=ExtResource("2_kbm85")]

[node name="Player" parent="." instance=ExtResource("3_ir76f")]
position = Vector2(184, 453)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="HUD" parent="." instance=ExtResource("5_fewo3")]

[node name="GameOver" parent="." instance=ExtResource("6_jk37s")]
process_mode = 2

[node name="CombustivelManager" parent="." instance=ExtResource("10_choun")]

[node name="CharacterHurt" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_choun")
volume_db = -10.0

[node name="Ghost" parent="." instance=ExtResource("8_tipki")]
position = Vector2(-88, -72)

[node name="ColetaDeLuz" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("8_ya4ey")
volume_db = -30.0

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_ya4ey")
volume_db = -50.0
pitch_scale = 2.04

[node name="SoproContinuo" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("12_eb6dy")
volume_db = -30.0
pitch_scale = 0.7

[node name="GhostSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("13_trceg")
volume_db = -30.0

[node name="ThunderSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("14_a8y0u")
volume_db = -12.683
pitch_scale = 1.4

[node name="BellSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("15_jkv2x")
volume_db = -12.683

[node name="Combustivel" parent="." instance=ExtResource("16_jbj1t")]
position = Vector2(893, 408)
